third_party/move/move-compiler-v2/tests/lambda/lambda3.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/lambda3.move:77:18
   │
77 │         let _x = |i| i + 1; // expected lambda not allowed
   │                  ^^^^^^^^^
